# HomeAssistantPluginIntegration

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
custom_components/hisense_connectlife/: README.md  __init__.py  api.py  application_credentials.py  atw_035_699_heater.py  auth.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity_descriptions.py  humidifier.py  manifest.json  models.py  number.py  oauth2.py  reauth.py  sensor.py  switch.py  water_heater.py  websocket.py
custom_components/hisense_connectlife/devices/: __init__.py  atw_035_699.py  base.py  base_bean.py  bean_006_299.py  hum_007.py  split_ac_009_199.py  window_ac_008_399.py
