[project]
name = "homeassistantpluginintegration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "connectlife-cloud>=0.2.0",
    "homeassistant>=2025.4.4",
    "pytz>=2026.1.post1",
    "voluptuous>=0.15.2",
]

[dependency-groups]
dev = ["ruff>=0.15.2", "ty>=0.0.18", "pre-commit>=4.5.1"]
